# Geant4MWE

./: CMakeLists.txt  README.md
src/: ActionInitialization.cpp  ActionInitialization.hpp  DetectorConstruction.cpp  DetectorConstruction.hpp  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.hpp  WorkerMTRunManager.cpp  WorkerMTRunManager.hpp  WorkerRunManager.cpp  WorkerRunManager.hpp  main.cpp
